# OpenGL-Model-Loader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
includes/: camera.h  mesh.h  model.h  renderer.h  shader.h  texture.h
includes/imgui/: imgui.h  imgui_internal.h
libs/assimp/assimp/: config.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
shaders/: fragment.frag  vertex.vert
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp
